lessons learned bei infovis

--- a/da_piccolotto.tex
+++ b/da_piccolotto.tex
@@ -593,7 +593,7 @@ Durch \textbf{Verzerrung} kann ein Bereich der Visualisierung mit hohem Detailgr
    \label{figure:link_brush}
 \end{figure}
 
-todo: Was habe ich daraus jetzt gelernt?
+In diesem Abschnitt wurde ein Überblick über verschiedene mögliche Informationsvisualisierungen gegeben, welche bei der Konzeption berücksichtigt werden müssen. Die enthaltenen Daten können beliebig viele Dimensionen besitzen, in Form von Text auftreten oder Netzwerke beschreiben. Das zu erarbeitende Hilfesystem muss also mit jeder Form von Daten umgehen können. Mögliche Visualisierungstechniken beinhalten Standard 2D/3D Visualisierungen (z.\,B. Balkendiagramme), können aber auch multidimensional sein oder verschachtelt beziehungsweise symbolisch. Für das Hilfesystem bedeutet das, dass von keiner festen Darstellung der Daten ausgegangen werden kann. Die Interaktionstechniken umfassen Filtern, Zoomen und Verzerren der Datendimensionen. Das Hilfesystem kann also beispielsweise keine Annahmen über die verwendete Skala, den sichtbaren Bereich oder die sichtbaren Daten machen.
 
 \subsection{User Assistance}
 \label{section:standderforschung:grundlagen:user_assistance}
@@ -726,7 +726,7 @@ Für die Arbeit mit VizBoard ist es ebenfalls wichtig, die Kommunikation zwische
 % gut: nutzerstudie
 % schlecht: 
 
-DashMash \cite{Cappiello2011} ist eine Mashup Plattform, die besonders auf Endnutzer ausgerichtet ist. Dazu setzt es auf das \enquote{What You See Is What You Get} Prinzip und abstrahiert von Mashup-Interna wie dem Binding zwischen Datenquellen und Komponenten. Es ist nicht möglich Erkenntnisse aus den Daten mit anderen zu teilen oder selbst Anmerkungen anderer zu lesen. Obwohl keine sichtbaren\footnote{Ein Demo-Video ist unter \url{http://home.dei.polimi.it/cappiell/demo/DemoDashMash.mov} verfügbar.} Hilfestellungen bezüglich \emph{Intro}, \emph{Bedienung} oder \emph{Kommunikation} verfügbar sind, fiel die Nutzerstudie mit 35~Teilnehmern durchweg positiv aus. Der Grund dafür ist wahrscheinlich, dass die Erklärungen am Anfang der Studie so gewählt wurden, dass die Testpersonen ein \enquote{korrektes} mentales Modell von DashMash hatten. Für die Hilfe in VizBoard sollte deswegen auch soweit möglich Technisches abstrahiert oder vor dem Benutzer versteckt werden. Des weiteren sollten Erklärungen dem mentalen Modell des Benutzers entsprechen.
+DashMash \cite{Cappiello2011} ist eine Mashup Plattform, die besonders auf Endnutzer ausgerichtet ist. Dazu setzt es auf das WYSIWYG\footnote{What you see is what you get.} Prinzip und abstrahiert von Mashup-Interna wie dem Binding zwischen Datenquellen und Komponenten. Es ist nicht möglich Erkenntnisse aus den Daten mit anderen zu teilen oder selbst Anmerkungen anderer zu lesen. Obwohl keine sichtbaren\footnote{Ein Demo-Video ist unter \url{http://home.dei.polimi.it/cappiell/demo/DemoDashMash.mov} verfügbar.} Hilfestellungen bezüglich \emph{Intro}, \emph{Bedienung} oder \emph{Kommunikation} verfügbar sind, fiel die Nutzerstudie mit 35~Teilnehmern durchweg positiv aus. Der Grund dafür ist wahrscheinlich, dass die Erklärungen am Anfang der Studie so gewählt wurden, dass die Testpersonen ein \enquote{korrektes} mentales Modell von DashMash hatten. Für die Hilfe in VizBoard sollte deswegen auch soweit möglich Technisches abstrahiert oder vor dem Benutzer versteckt werden. Des weiteren sollten Erklärungen dem mentalen Modell des Benutzers entsprechen.
 
 % omelette auch (weil datenquellen in komponenten drin)
 % gut: einfache interaktion (widget hinzufügen und das wars
